FIX : Missplaced cross and version number on mobile. GitHub issue #1

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .go-home{
     color:white;
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     right : 10px;
     z-index: 2;
@@ -12,7 +12,7 @@
 }
 .game_version{
     opacity: 0.5;
-    position: absolute;
+    position: fixed;
     bottom:5px;
     left : 5px;
 }
